# ArchitectureAssessment

./: .gitignore  ReadMe.md  base_dataframe.py  config.py  main.py  pyproject.toml
